[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://game/scripts/ui/SplashScreen.gd" id="1"]

[sub_resource type="LabelSettings" id="LabelSettings_logo"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_legal"]
font_size = 14

[node name="SplashScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 200)

[node name="LogoLabel" type="Label" parent="CenterContainer/VBoxContainer"]
horizontal_alignment = 1
text = "Clover Studios"
label_settings = SubResource("LabelSettings_logo")

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)

[node name="LegalLabel" type="Label" parent="CenterContainer/VBoxContainer"]
horizontal_alignment = 1
text = "Â© 2026 Clover Studios
All Rights Reserved

This is a work of fiction. Any resemblance to actual
persons or events is purely coincidental."
label_settings = SubResource("LabelSettings_legal")

[node name="SkipHint" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
horizontal_alignment = 1
text = "Tap to continue"
modulate = Color(1, 1, 1, 0)

[node name="FadeRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
